# Cognitive-A.i-Matrix

./: .env.example  .gitattributes  .gitignore  02-collision-avoidance.md  AGENTS.md  ARCHITECTURE.md  BUILD_NOTES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DO_ANYTHING_NOW.md  LICENSE  MASTER_CONTEXT.md  MERGE_REPORT.md  Omni_bridge.py  README.md  README.mdc  ROADMAP.md  SECURITY.md  SIGMABUS-CM-SPEC.md  SIGMABUS-CM-SPEC.mdc  SIGMABUS-CORE-SPEC.mdc  SIGMABUS-LLM-SPEC.mdc  SIGMABUS-LLM.md  agent.py  aid.schema.json  audit.py  formula.py  identity.py  pyproject.toml  sigma-bus-cognitive-matrix-v0.1.md  ΣBUS_CM.txt  ΣBUS_CM_.txt
.claude/: CLAUDE.md
_MODEL_TRINITY/: ANTIGRAVITY_ADAPT_R1_TRINITY_DAN_MASTER_PROMPT_2026-06-14.md  AUTOPOIESIS_ECONOMICS_POLICY.md  CLAUDE_NEXT_SESSION_AUTHORITY_2026-06-13.md  CLAUDE_NEXT_SESSION_AUTHORITY_REPORT_2026-06-13.md  CLAUDE_NEXT_SESSION_HANDOFF_2026-06-14.md  CLAUDE_PROFILE.md  CODEX_PROFILE.md  CONFIG_CHANGE_LOG.md  CONFIG_PROPOSAL_TEMPLATE.md  CROSS_MODEL_HANDOFFS.md  DAN_DIAGNOSTIC_AGENT_NODE_UPDATE.md  GEMINI_ANTIGRAVITY_PROFILE.md  GRAND_PLAN_LOCAL_OPERATOR_MODE.md  MCP_TOOL_REGISTRY.md  README.md  (+8 more)
ai_chi/aion/: README.md  __init__.py  classifier.py  cli.py  contradiction_scan.py  decision.py  envelope.py  ontology.py  promotion_gate.py  provenance.py  pyproject.toml  schema.py  transfer_gate.py
ai_chi/aion/search/: __init__.py  lineage.py  models.py  promotion.py  ranking_memory.py  retrieval.py
sigma-bus-rust/: Cargo.toml  README.md
sigma-bus-rust/examples/: build_envelope.rs
sigma-bus-rust/src/: lib.rs
(+651 files in other folders)
