[package]
name = "sigma-bus-rust"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Rust client types and helpers for Sigma Bus v1 envelopes"
repository = "https://github.com/Vi-Chi/sigmabus"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
ed25519-dalek = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
